# behavioral-score-diffusion

./: index.html
code/: .gitignore  README.md  pyproject.toml
code/experiments/: run_all_experiments.py  run_bsd_experiments.py
code/mbd/: __init__.py
code/mbd/data/: __init__.py  collect_data.py  trajectory_dataset.py
code/mbd/planners/: __init__.py  bsd_planner.py
code/mbd/robots/: tt2d.py
code/mbd/scorers/: __init__.py  bandwidth_schedule.py  behavioral_score.py
code/tests/test_bsd/: test_behavioral_score.py
static/css/: index.css
static/videos/: generate_gifs.py
